--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "api-platform/api-pack": "^1.2",
+        "doctrine/doctrine-migrations-bundle": "^2.1",
         "symfony/console": "4.3.*",
         "symfony/dotenv": "4.3.*",
         "symfony/flex": "^1.3.1",
@@ -17,7 +18,9 @@
         "fzaninotto/faker": "^1.9",
         "justinrainbow/json-schema": "^5.2",
         "symfony/http-client": "4.3.*",
-        "symfony/test-pack": "^1.0"
+        "symfony/maker-bundle": "^1.14",
+        "symfony/test-pack": "^1.0",
+        "symfony/web-server-bundle": "4.3.*"
     },
     "config": {
         "preferred-install": {
